Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2100

ofd batched precreation exceeds transaction on small devices

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.4.0
    • None
    • 3
    • 4387

      on small devices (like used with local configuration) and ldiskfs ofd batched pre-creation can exceed transaction causing a lot of messages like:

      Lustre: 13034:0:(osd_handler.c:697:osd_trans_start()) lustre-OST0000: too many transaction credits (3191 > 1024)
      LustreError: 13034:0:(osd_handler.c:708:osd_trans_start()) attr_set: 0, punch: 0, xattr_set: 0,
      LustreError: 13034:0:(osd_handler.c:711:osd_trans_start()) create: 127, ref_add: 0, ref_del: 0, write: 1
      LustreError: 13034:0:(osd_handler.c:714:osd_trans_start()) insert: 0, delete: 0, destroy: 0

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: