LU-2100 ofd: tune batched precreate down

depending on load OFD may try to precreate many objects
within a single transasction (up to 128). on a small
system this may lead to transaction overflow, complains
from OSD. to prevent this OSD may return -ENOSPC from
dt_trans_start() and OFD can decrease number of batched
creates.

Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Change-Id: Idbac6149e75a7c1d8552d0601de5faabe0743154